--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,114 @@
-/* You can add global styles to this file, and also import other style files */
+body
+  overflow-x: hidden
+  background-color: #ebeff2 !important
+  position: relative
+  min-height: 100vh
+
+main
+  padding-bottom: 120px
+
+.rounded-md
+  border-radius: 0.375rem !important //* 6px *//
+
+.rounded-lg
+  border-radius: 0.5rem !important //* 8px *//
+
+.rounded-xl
+  border-radius: 0.75rem !important //* 12px *//
+
+.rounded-2xl
+  border-radius: 1rem !important //* 16px *//
+
+.rounded-3xl
+  border-radius: 1.5rem !important //* 24 px *//
+
+.width-xs
+  min-width: 80px
+
+.width-sm
+  min-width: 100px
+
+.width-md
+  min-width: 120px
+
+.width-lg
+  min-width: 140px
+
+.width-xl
+  min-width: 160px
+
+//* Page Title *//
+.page-title-box
+  .page-title
+    font-size: 1.25rem
+    margin: 0
+    line-height: 75px
+    color: #323a46
+
+  .page-title-right
+    float: right
+    margin-top: 22px
+
+  .breadcrumb
+    padding-top: 5px
+
+@media (max-width: 767.98px)
+  .page-title-box
+    .page-title
+      display: block
+      white-space: nowrap
+      text-overflow: ellipsis
+      overflow: hidden
+      line-height: 70px
+
+    .breadcrumb
+      display: none
+
+@media (max-width: 640px)
+  .page-title-box .page-title-right
+    display: none
+
+@media (max-width: 419px)
+  .page-title-box .breadcrumb
+    display: none
+
+//* Animation *//
+.flash
+  animation-name: flash
+  animation-duration: 1s
+  animation-timing-function: linear
+  animation-iteration-count: infinite
+  -webkit-animation-name: flash
+  -webkit-animation-duration: 1s
+  -webkit-animation-timing-function: linear
+  -webkit-animation-iteration-count: infinite
+
+@-moz-keyframes flash
+  0%
+  opacity: 1.0
+
+  50%
+  opacity: 0.0
+
+  100%
+  opacity: 1.0
+
+@-webkit-keyframes flash
+  0%
+  opacity: 1.0
+
+  50%
+  opacity: 0.0
+
+  100%
+  opacity: 1.0
+
+@keyframes flash
+  0%
+    opacity: 1.0
+
+  50%
+    opacity: 0.0
+
+  100%
+    opacity: 1.0
